Bug fix for hamburger on Safari take two

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -152,15 +152,16 @@ h2 {
         display: block;
         background-color: $button-background;
         color: $primary-font-color;
-        width: 48px;
-        height: 48px;
-        min-width: 48px;
-        min-height: 48px;
         margin-left: 12px;
         flex-shrink: 0;
         border-radius: 6px;
         cursor: pointer;
         transition: box-shadow 0.25s;
+
+        img {
+            width: 42px;
+            height: 42px;
+        }
     }
 
     .heading .wrapper {
