--- a/styles/style.css
+++ b/styles/style.css
@@ -494,10 +494,6 @@ h2 {
     display: block;
     background-color: #ffffff;
     color: #4c4c4c;
-    width: 48px;
-    height: 48px;
-    min-width: 48px;
-    min-height: 48px;
     margin-left: 12px;
     -ms-flex-negative: 0;
         flex-shrink: 0;
@@ -507,6 +503,10 @@ h2 {
     transition: -webkit-box-shadow 0.25s;
     transition: box-shadow 0.25s;
     transition: box-shadow 0.25s, -webkit-box-shadow 0.25s;
+  }
+  .hamburger-button img {
+    width: 42px;
+    height: 42px;
   }
   .heading .wrapper {
     background-size: 65%;
